feat: Implement initial quiz game spectator screen, player interface, and database.

--- a/public/player.html
+++ b/public/player.html
@@ -137,6 +137,13 @@
                 <span id="scoreChange">+0</span>
                 <span>puan</span>
             </div>
+
+            <div class="leaderboard-section hidden" id="playerLeaderboardSection">
+                <h3 class="section-title">🏆 Sıralama</h3>
+                <div class="mini-leaderboard" id="playerLeaderboard">
+                    <!-- Leaderboard entries will go here -->
+                </div>
+            </div>
         </div>
     </div>
 
