feat: Implement a real-time quiz game with player, screen, and admin interfaces, including game state management, a new database, cinematic reveal sequences, and animated leaderboards.

--- a/public/player.html
+++ b/public/player.html
@@ -69,17 +69,20 @@
             </div>
 
             <!-- Question -->
+            <!-- Question -->
             <div class="question-content">
-                <div class="question-meta">
-                    <span class="question-points" id="questionPoints">10 Puan</span>
-                </div>
-                <div class="question-text" id="questionText">
-                    Soru metni burada görünecek...
-                </div>
-
-                <!-- Media (optional) -->
+                <!-- Media (optional) - Moved to top -->
                 <div class="question-media hidden" id="questionMedia">
                     <img src="" alt="Soru görseli" id="questionImage">
+                </div>
+
+                <div class="question-body">
+                    <div class="question-meta">
+                        <span class="question-points" id="questionPoints">10 Puan</span>
+                    </div>
+                    <div class="question-text" id="questionText">
+                        Soru metni burada görünecek...
+                    </div>
                 </div>
             </div>
 
