--- a/public/screen.html
+++ b/public/screen.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seyirci Ekranı - Bilgi Yarışması</title>
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/screen.css">
+    <link rel="stylesheet" href="/css/screen.css?v=4">
 </head>
 
 <body class="screen-body">
@@ -106,7 +106,7 @@
 
     <!-- Results Screen -->
     <div class="screen-state hidden" id="resultsScreen">
-        <div class="results-layout">
+        <div class="results-layout initial-state">
             <!-- Left Column: Reveal & Answers -->
             <!-- Left Column: Reveal & Answers -->
             <div class="results-main">
@@ -160,7 +160,7 @@
     <script src="/js/socket.io.min.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/sounds.js"></script>
-    <script src="/js/screen.js?v=3"></script>
+    <script src="/js/screen.js?v=5"></script>
 </body>
 
 </html>
